syntax = "proto3";

option go_package = "github.com/signshine/give-a-sign/api/pb";

message UserSignUpRequest {
    string email = 1;
    string password = 2;
}

message UserSignUpResponse {
    string accessToken = 1;
    string refreshToken = 2;
}


message UserSignInRequest {
    string email = 1;
    string password = 2;
    string otp = 3;
}

message UserSignInResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message User {
    uint64 id = 1;
    string email = 2;
    string password = 3;
}